# native_opencv

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: file.dart  main.dart
ios/: native_opencv.podspec
ios/Classes/: native_opencv.cpp
lib/: native_opencv.dart  native_opencv_bindings_generated.dart
src/: CMakeLists.txt  native_opencv.cpp  native_opencv.h  opencv_version.cpp
src/filters/: canny_edge_detector.cpp  canny_edge_detector_v2.cpp  gausian_blur.cpp  remove_bg.cpp  remove_white_bg.cpp  rough.cpp  sketch.cpp  sobel_edge_detector.cpp
